# mashcode

./: .eslintrc.json  .gitignore  README.md  bun.lockb  docker-compose.yml  drizzle.config.ts  flake.nix  mashcode ideas.txt  package.json  run.sh  tailwind.config.ts
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/db/: problem_details.json  problem_urls.json
backend/lib/: constants.py  database.py  judge0.py  models.py  schema.py
backend/lib/crud/: match.py  practice.py  submission.py  user.py
backend/lib/utils/: matchmaking.py
backend/routers/: auth.py  match.py  practice.py  practice_questions.py  problem_details.json  problem_urls.json  scrape_and_store.py  scrape_questions.py  submission.py  testcases_scrape.py
backend/scripts/: scrape_and_store.py  testcases_scrape.py
backend/testcases/1070/: testcase_output_10.txt  testcase_output_11.txt  testcase_output_12.txt  testcase_output_13.txt  testcase_output_14.txt  testcase_output_15.txt  testcase_output_16.txt  testcase_output_6.txt  testcase_output_8.txt  testcase_output_9.txt
backend/testcases/1071/: testcase_input_2.txt
backend/testcases/1083/: testcase_input_10.txt  testcase_input_14.txt  testcase_input_2.txt  testcase_input_6.txt  testcase_input_9.txt
backend/testcases/1094/: testcase_input_7.txt
backend/testcases/2/: testcase_input_11.txt  testcase_input_12.txt  testcase_input_4.txt  testcase_input_5.txt  testcase_input_8.txt
backend/testcases/3/: testcase_input_2.txt  testcase_input_5.txt  testcase_input_7.txt  testcase_input_8.txt
frontend/: .gitignore  (+6 more)
(+715 files in other folders)
